--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: 'font-Principal-h1';
+    src: url( './assets/fonts/RifficFree-Bold.ttf' ) format( 'truetype' );
+}
+@font-face {
+    font-family: 'font-Secundaria-h3';
+    src: url('./assets/fonts/Larke\ Neue\ Regular.ttf');
+}
+html, body {
+    margin: 0;
+    padding: 0;
+}
+.page {
+    min-height: calc(100vh - 210px);
+    background-image: radial-gradient(circle, rgb(26, 18, 189) 0%, rgb(104, 118, 222) 100%);
+    padding: 20px;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+/* FONTES */
+$fonte-principal: "Arial", sans-serif;
+$fonte-secundaria: "Times New Roman", serif;
+$pequena: 14px;
+$media: 18px;
+$grande: 24px;
+$extra-grande: 32px;
+
+/* CORES */
+$cor-principal: #3D405B;
+$cor-secundaria: #E07A5F;
+$branco: #FFFFFF;
+$off-white: #F4F1DE;
+$cinza: #D3D3D3;
+$preto: #000000;
+
+/* SOMBRAS */
+$card-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$card-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+$card-shadow-hover: 0 8px 16px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.11);
