--- a/src/app/paginas/homepage/homepage.component.html
+++ b/src/app/paginas/homepage/homepage.component.html
@@ -11,58 +11,52 @@
     <mat-card class="example-card">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>Fred</mat-card-title>
+          <mat-card-subtitle>Moderador</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="https://www.blogolandialtda.com.br/img-upload/images/Itapevi(2).gif" alt="Photo of a Shiba Inu">
         <mat-card-content>
           <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
+            Itapevi, localizada na Região Metropolitana de São Paulo, é uma cidade que vem crescendo e se desenvolvendo com vigor, mantendo suas raízes e tradições. Com uma história que remonta à época dos bandeirantes, quando começou a ser explorada e habitada, Itapevi carrega em seu nome a herança indígena, significando "pedra chata", em referência às formações rochosas presentes na região.
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
+          <button mat-button><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
+          <button mat-button><img src="../../../assets/img/compartilhar.png" alt="img-compartilhar" class="bt-compartilhar">Compartilhar</button>
         </mat-card-actions>
       </mat-card>
       <mat-card class="example-card">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>Fred</mat-card-title>
+          <mat-card-subtitle>Moderador</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="https://www.blogolandialtda.com.br/img-upload/images/Itapevi(2).gif" alt="Photo of a Shiba Inu">
         <mat-card-content>
           <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
+            Itapevi, localizada na Região Metropolitana de São Paulo, é uma cidade que vem crescendo e se desenvolvendo com vigor, mantendo suas raízes e tradições. Com uma história que remonta à época dos bandeirantes, quando começou a ser explorada e habitada, Itapevi carrega em seu nome a herança indígena, significando "pedra chata", em referência às formações rochosas presentes na região.
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
+          <button mat-button><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
+          <button mat-button><img src="../../../assets/img/compartilhar.png" alt="img-compartilhar" class="bt-compartilhar">Compartilhar</button>
         </mat-card-actions>
       </mat-card>
       <mat-card class="example-card">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>Fred</mat-card-title>
+          <mat-card-subtitle>Moderador</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="https://www.blogolandialtda.com.br/img-upload/images/Itapevi(2).gif" alt="Photo of a Shiba Inu">
         <mat-card-content>
           <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
+            Itapevi, localizada na Região Metropolitana de São Paulo, é uma cidade que vem crescendo e se desenvolvendo com vigor, mantendo suas raízes e tradições. Com uma história que remonta à época dos bandeirantes, quando começou a ser explorada e habitada, Itapevi carrega em seu nome a herança indígena, significando "pedra chata", em referência às formações rochosas presentes na região.
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
+          <button mat-button><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
+          <button mat-button><img src="../../../assets/img/compartilhar.png" alt="img-compartilhar" class="bt-compartilhar">Compartilhar</button>
         </mat-card-actions>
       </mat-card>
     </div>
