botoes cards corrigidos

--- a/src/app/paginas/homepage/homepage.component.html
+++ b/src/app/paginas/homepage/homepage.component.html
@@ -21,8 +21,25 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
-          <button mat-button><img src="../../../assets/img/compartilhar.png" alt="img-compartilhar" class="bt-compartilhar">Compartilhar</button>
+            <button mat-raised-button class="cont-Curtir"><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
+            <button mat-raised-button><img src="../../../assets/img/compartilhar.png" alt="img-curtir" class="bt-compartilhar">Compartilhar</button>
+          </mat-card-actions>
+      </mat-card>
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Fred</mat-card-title>
+          <mat-card-subtitle>Moderador</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://www.blogolandialtda.com.br/img-upload/images/Itapevi(2).gif" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            Itapevi, localizada na Região Metropolitana de São Paulo, é uma cidade que vem crescendo e se desenvolvendo com vigor, mantendo suas raízes e tradições. Com uma história que remonta à época dos bandeirantes, quando começou a ser explorada e habitada, Itapevi carrega em seu nome a herança indígena, significando "pedra chata", em referência às formações rochosas presentes na região.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button class="cont-Curtir"><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
+          <button mat-raised-button><img src="../../../assets/img/compartilhar.png" alt="img-curtir" class="bt-compartilhar">Compartilhar</button>
         </mat-card-actions>
       </mat-card>
       <mat-card class="example-card">
@@ -38,25 +55,8 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
-          <button mat-button><img src="../../../assets/img/compartilhar.png" alt="img-compartilhar" class="bt-compartilhar">Compartilhar</button>
-        </mat-card-actions>
-      </mat-card>
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Fred</mat-card-title>
-          <mat-card-subtitle>Moderador</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://www.blogolandialtda.com.br/img-upload/images/Itapevi(2).gif" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            Itapevi, localizada na Região Metropolitana de São Paulo, é uma cidade que vem crescendo e se desenvolvendo com vigor, mantendo suas raízes e tradições. Com uma história que remonta à época dos bandeirantes, quando começou a ser explorada e habitada, Itapevi carrega em seu nome a herança indígena, significando "pedra chata", em referência às formações rochosas presentes na região.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
-          <button mat-button><img src="../../../assets/img/compartilhar.png" alt="img-compartilhar" class="bt-compartilhar">Compartilhar</button>
+          <button mat-raised-button class="cont-Curtir"><img src="../../../assets/img/Curtir.png" alt="img-curtir" class="bt-curtir">Curtir</button>
+          <button mat-raised-button><img src="../../../assets/img/compartilhar.png" alt="img-curtir" class="bt-compartilhar">Compartilhar</button>
         </mat-card-actions>
       </mat-card>
     </div>
