--- a/src/app/paginas/homepage/homepage.component.scss
+++ b/src/app/paginas/homepage/homepage.component.scss
@@ -67,11 +67,16 @@
         background-image: url('https://img.freepik.com/psd-gratuitas/ilustracao-3d-de-avatar-ou-perfil-humano_23-2150671142.jpg?size=338&ext=jpg&ga=GA1.1.1700460183.1712448000&semt=sph');
         background-size: cover;
       }
+      .cont-Curtir{
+        margin-right: 20px;
+      }
       .bt-curtir{
         width: 20px;
+        margin-right: 8px;
       }
       .bt-compartilhar{
         width: 20px;
+        margin-right: 8px;
       }
     }  
 }
