--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-cabecalho></app-cabecalho>
-<h1>Olá {{nome}}, seja bem vindo ! </h1>
-<p>Hoje é {{data}}</p>
+<!-- <h1>Olá {{nome}}, seja bem vindo ! </h1>
+<p>Hoje é {{data}}</p> -->
 <router-outlet />
 <app-rodape></app-rodape>
